--- a/airship-treasuremap/site/airskiff/secrets/certificates/ingress.yaml
+++ b/airship-treasuremap/site/airskiff/secrets/certificates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     layer: site
   name: ingress-crt
   labels:
-    name: ingress-crt-site
+    name: ingress-crt
 apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificate
 spec: |
@@ -50,7 +50,7 @@ metadata:
     layer: site
   name: ingress-ca
   labels:
-    name: ingress-ca-site
+    name: ingress-ca
 apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificateAuthority
 spec: |
@@ -86,7 +86,7 @@ metadata:
     layer: site
   name: ingress-key
   labels:
-    name: ingress-key-site
+    name: ingress-key
 apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificateKey
 spec: |
