--- a/airship-treasuremap/site/airship-seaworthy/secrets/certificates/ingress.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/secrets/certificates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificate
 metadata:
   labels:
-    name: ingress-crt-site
+    name: ingress-crt
   layeringDefinition:
     abstract: false
     layer: site
@@ -44,7 +44,7 @@ apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificateAuthority
 metadata:
   labels:
-    name: ingress-ca-site
+    name: ingress-ca
   layeringDefinition:
     abstract: false
     layer: site
@@ -79,7 +79,7 @@ apiVersion: deckhand.airshipit.org/v1alpha1
 kind: DeckhandCertificateKey
 metadata:
   labels:
-    name: ingress-key-site
+    name: ingress-key
   layeringDefinition:
     abstract: false
     layer: site
